<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_i2ccpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="20467009+jncfa@users.noreply.github.com">ros</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>i2c-tools</build_depend>
  <build_depend>libi2c-dev</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
